backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: cilium-testing
    role: db
    tier: backend
  annotations:
    kubernetes.io/change-cause: "Deploying Mongo 4.2 Version"
  namespace: testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cilium-testing
      role: db
      tier: backend
  template:
    metadata:
      labels:
        app: cilium-testing
        role: db
        tier: backend
    spec:
      containers:
      - name: mongo-db
        image: mongo:4.2
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: cilium-testing
    role: db-svc
    tier: backend
  namespace: testing
spec:
  type: ClusterIP
  selector:
    app: cilium-testing
    role: db
    tier: backend
  ports:
  - port: 27017
    targetPort: 27017
