frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
  labels:
    app: cilium
    role: web
    tier: frontend
  annotations:
    kubernetes.io/change-cause: "Deploying PHP WEB V5"
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cilium
      role: web
      tier: frontend
  template:
    metadata:
      labels:
        app: cilium
        role: web
        tier: frontend
    spec:
      containers:
      - name: php
        image: paulczar/gb-frontend:v5
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: php
  labels:
    app: cilium
    role: web
    tier: frontend
  namespace: demo
spec:
  type: NodePort
  selector:
    app: cilium
    role: web
    tier: frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32323
