All-Incoming-Outgoing-Traffic-Blocked-NetworkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cilium-testing
  namespace: testing
spec:
  podSelector:
    matchLabels:
      app: cilium-testing
      tier: backend
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress: []
