Allow-Match-Labels-Frontend-only-through-NetworkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cilium-testing
  namespace: testing
spec:
  podSelector:
    matchLabels:
      app: cilium-testing
      tier: backend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: cilium-testing
              tier: frontend
      ports:
        - port: 27017
  egress: []
